@@ -5,5 +5,4 @@ xml:
     res.xml
     group.xml
     user.xml
-    request.xml
     ir.xml
