@@ -1,7 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree string="Request References">
-    <field name="request"/>
-    <field name="reference"/>
-</tree>
